syntax = "proto3";

option go_package = "genproto/mobile";

package mobile;

import "common2.proto";
import "car_type.proto";

service CarService{
    rpc Create(CarCreateReq) returns(Void);
    rpc GetById(ById) returns(CarGetByIdRes);
    rpc GetAll(CarGetAllReq) returns(CarGetAllRes);
    rpc Update(CarUpdateReq) returns(Void);
    rpc Delete(ById) returns(Void);
}

message CarRes{
    string id = 1;
    StafRes staf_id = 2;
    CarTypeRes type = 3;
    string color = 4;
    int32 year = 5;
    string body_number = 6;
    int32 horse_power = 7;
    string number = 8;
    string technical_passport = 9;
    string model = 10;
    string image_url = 11;
}

message CarCreateReq{
    string staf_id = 1;
    string type = 2;
    string color = 3;
    int32 year = 4;
    string body_number = 5;
    int32 horse_power = 6;
    string number = 7;
    string technical_passport = 8;
    string model = 9;
    string image_url = 10;
}

message CarUpdateReq{
    string car_number = 1;
    string technical_passport = 2;
    string image_url = 3;
}

message CarGetByIdRes{
    CarRes car = 1;
}

message CarGetAllRes{
    repeated CarRes cars = 1;
}

message CarGetAllReq{
    string type = 1;
    string model = 2;
    int32 year = 3;
    Filter filter = 4;
}